<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sy233alpha_bg"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <LinearLayout
        android:id="@+id/popu_contentview"
        android:layout_gravity="center"
        android:background="@drawable/sy233popup_bg"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
      <include layout="@layout/sy233activity_header"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout

            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/sy233popup_bottom_bg"
            >
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="46dp">
                    <FrameLayout
                        android:id="@+id/temp3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp">
                        <ImageButton

                            android:layout_gravity="center"
                            android:id="@+id/ib_phone_clean"
                            android:visibility="invisible"
                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            android:background="@mipmap/sy233clean"/>
                    </FrameLayout>


                    <ImageView
                        android:id="@+id/temp"
                        android:layout_width="15dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/sy233phone"/>

                    <EditText
                        android:id="@+id/ed_phone"
                        style="@style/sy233register_edit"
                        android:hint="@string/sy233input_phone"
                        android:layout_toRightOf="@+id/temp"
                        android:layout_toLeftOf="@+id/temp3"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#a0a0a0"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:gravity="center_vertical">
                    <FrameLayout
                        android:id="@+id/temp4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp">
                        <CheckBox
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:id="@+id/ib_pwd_show"
                            android:layout_width="30dp"
                            android:layout_height="22dp"
                            android:button="@null"
                            android:checked="false"
                            android:background="@drawable/sy233pwd_hide_bg"/>
                    </FrameLayout>

                    <ImageView
                        android:id="@+id/temp2"
                        android:layout_width="15dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/sy233lock"/>

                    <EditText
                        android:id="@+id/ed_pwd"
                        style="@style/sy233register_edit"
                        android:layout_toLeftOf="@id/temp4"
                        android:layout_toRightOf="@+id/temp2"
                        android:hint="@string/sy233input_pwd"
                        android:inputType="textPassword"
                        android:maxLength="20"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#a0a0a0"/>
                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_marginTop="8dp"
                    android:text="忘记密码"
                    android:textColor="@color/sy233colorPrimary"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="41dp"
                android:layout_marginRight="41dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/sy233bt_detail_down_bg"
                android:text="@string/sy233login"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                />

            <Button
                android:id="@+id/bt_regster"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="41dp"
                android:layout_marginRight="41dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sy233bt_register_bg"
                android:text="@string/sy233register"
                android:textColor="@color/sy233colorPrimary"
                android:textSize="18dp"
                />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>

